# docket

./: .gitignore  LICENSE  MANIFEST.in  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: GAP_ANALYSIS_TICKET_PLAYBOOK.md  PLAYLIST_PLAYBOOK.md
frontend/: README.md  index.html  node_modules  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  ui.js
frontend/src/components/: AmendModal.jsx  Analytics.jsx  Board.jsx  BulkUpload.jsx  Checklist.jsx  EpicsModal.jsx  Help.jsx  Login.jsx  Markdown.jsx  NewTicketModal.jsx  Profiles.jsx  TicketCard.jsx  TicketDetail.jsx
src/docket_dev/: __init__.py  _timeutil.py  agent.py  app.py  auth.py  bulk_import.py  cli.py  config.py  control_app.py  quota.py  recognize.py  roadmap.py  roadmap_routes.py  routes.py  service.py  storage.py  telemetry.py
src/docket_dev/web/: build.html  roadmap.html  service.html
