[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docket-dev"
version = "0.1.0"
description = "Docket — a portable ticket pipeline + autonomous dev agent you install into any git repo."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "bcrypt",
    "python-jose[cryptography]",
]

[project.scripts]
docket = "docket_dev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docket_dev" = ["web/dist/**/*"]
