[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docket-dev"
version = "0.1.0"
description = "Docket — a portable ticket pipeline + autonomous dev agent you install into any git repo."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Neil Byrne", email = "thenofisamizdat@gmail.com" }]
keywords = ["autonomous-agent", "ci-cd", "developer-tools", "claude", "ticketing", "code-generation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2",
    "bcrypt",
    "python-jose[cryptography]",
]

[project.urls]
Homepage = "https://github.com/thenofisamizdat/docket"
Repository = "https://github.com/thenofisamizdat/docket"
Issues = "https://github.com/thenofisamizdat/docket/issues"

[project.scripts]
docket = "docket_dev.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"docket_dev" = ["web/dist/**/*"]
